Ensure we don't overflow on add to reading list

--- a/UI/Web/src/app/reading-list/_modals/add-to-list-modal/add-to-list-modal.component.scss
+++ b/UI/Web/src/app/reading-list/_modals/add-to-list-modal/add-to-list-modal.component.scss
@@ -2,3 +2,8 @@
 .clickable:hover, .clickable:focus {
     background-color: var(--primary-color);
 }
+
+.list-group {
+    overflow: auto;
+    max-height: 350px;
+}
